updated dataset to remove duplicates

--- a/Trial 1/datainfo.ipynb
+++ b/Trial 1/datainfo.ipynb
@@ -622,6 +622,16 @@
     "duplicate_rows_data = data[data.duplicated()]\n",
     "print(\"number of duplicate rows: \", duplicate_rows_data.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('C:/Users/Admin/Desktop/Github/DAC-Internal-Projects/dataset/updated_dataset.csv', index=False)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
