--- a/ML .ipynb
+++ b/ML .ipynb
@@ -1,1 +1,179 @@
-{"cells":[{"cell_type":"markdown","metadata":{},"source":["# This is for us to create a ML model to predict future housing prices \n"]},{"cell_type":"code","execution_count":null,"metadata":{},"outputs":[],"source":["# Pre-processing"]},{"cell_type":"markdown","metadata":{},"source":[]}],"metadata":{"language_info":{"name":"python"}},"nbformat":4,"nbformat_minor":2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This is for us to create a ML model to predict future housing prices \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Pre-processing\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StandardScaler, LabelEncoder\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Load dataset\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
+   "source": [
+    "# Pre-processing\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "\n",
+    "# Load dataset\n",
+    "df = pd.read_csv(\"C:/Users/Admin/Desktop/Github/DAC-Internal-Projects/dataset/updated_dataset.csv\")\n",
+    "\n",
+    "# Handle missing values\n",
+    "df = df.dropna()\n",
+    "\n",
+    "# Feature engineering: Create an 'affordable' column (binary target)\n",
+    "median_income = 5000  # Example median income\n",
+    "affordability_threshold = median_income * 0.3 * 12  # Annual affordability threshold\n",
+    "df['affordable'] = (df['resale_price'] <= affordability_threshold).astype(int)\n",
+    "\n",
+    "# Normalize numerical columns\n",
+    "scaler = StandardScaler()\n",
+    "df[['floor_area', 'remaining_lease', 'resale_price']] = scaler.fit_transform(\n",
+    "    df[['floor_area', 'remaining_lease', 'resale_price']]\n",
+    ")\n",
+    "\n",
+    "# Encode categorical variables\n",
+    "encoder = LabelEncoder()\n",
+    "df['town'] = encoder.fit_transform(df['town'])\n",
+    "df['flat_type'] = encoder.fit_transform(df['flat_type'])\n",
+    "\n",
+    "# Split data into features and target\n",
+    "X = df.drop(['affordable', 'resale_price'], axis=1)  # Features\n",
+    "y = df['affordable']  # Target\n",
+    "\n",
+    "# Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# Train a Random Forest Classifier\n",
+    "model = RandomForestClassifier(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate model\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Feature importance\n",
+    "importances = model.feature_importances_\n",
+    "feature_names = X.columns\n",
+    "sorted_indices = importances.argsort()\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.barh(range(len(importances)), importances[sorted_indices], align='center')\n",
+    "plt.yticks(range(len(importances)), feature_names[sorted_indices])\n",
+    "plt.xlabel(\"Feature Importance\")\n",
+    "plt.title(\"Random Forest Feature Importance\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "# Aggregate affordability by town\n",
+    "df['town_name'] = encoder.inverse_transform(df['town'])  # Convert encoded towns back\n",
+    "affordability_summary = df.groupby('town_name')['affordable'].mean().reset_index()\n",
+    "affordability_summary.columns = ['Town', 'Affordability_Percentage']\n",
+    "\n",
+    "# Plot heatmap\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.barplot(data=affordability_summary, x='Town', y='Affordability_Percentage', palette='viridis')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.title(\"Affordability Percentage by Town\")\n",
+    "plt.ylabel(\"Percentage of Affordable Flats\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Train a Gradient Boosting Regressor\n",
+    "regressor = GradientBoostingRegressor(random_state=42)\n",
+    "regressor.fit(X_train, df.loc[X_train.index, 'resale_price'])\n",
+    "\n",
+    "# Predict resale prices\n",
+    "y_pred_price = regressor.predict(X_test)\n",
+    "\n",
+    "# Evaluate model\n",
+    "rmse = mean_squared_error(df.loc[X_test.index, 'resale_price'], y_pred_price, squared=False)\n",
+    "print(\"Root Mean Squared Error:\", rmse)\n",
+    "\n",
+    "# Calculate affordability score\n",
+    "affordability_scores = df.loc[X_test.index, 'resale_price'] - y_pred_price\n",
+    "df.loc[X_test.index, 'affordability_score'] = affordability_scores\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
